--- a/style.css
+++ b/style.css
@@ -14,3 +14,8 @@ code {
     background-color: lightgray;
     width: 100%;
 }
+card {
+    border: 5;
+    border-color: gray;
+    border-radius: 25px;
+}
