--- a/doodlebox/style.css
+++ b/doodlebox/style.css
@@ -5,3 +5,24 @@ html, body {
 canvas {
   display: block;
 }
+.center {
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+.nav {
+    top: 0;
+    background-color: yellow;
+    position: sticky;
+    top: 0;
+}
+code {
+    background-color: lightgray;
+    width: 100%;
+}
+card {
+    border: 5;
+    border-color: gray;
+    border-radius: 25px;
+}
